[package]
name = "rust_ofp"
version = "0.1.0"
authors = ["Sam Baxter <sbaxter@cs.umass.edu>"]

description = "Simple Rust OpenFlow 0x01 controller"

keywords = ["SDN", "Networking", "OpenFlow"]
license = "MIT"

[lib]
name = "rust_ofp"
path = "src/lib.rs"

[[bin]]
name = "rust_ofp_controller"
path = "src/main.rs"

[dependencies]
byteorder = "*"
